<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/line_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/resultPanel"
            style="@style/resultPanel"
            android:gravity="center|right"
            android:paddingRight="10dp"
            android:text="@string/text_0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/btn_7"
            android:text="@string/btn_7"
            style="@style/btn" />
        <TextView
            android:id="@+id/btn_8"
            android:text="@string/btn_8"
            style="@style/btn"/>
        <TextView
            android:id="@+id/btn_9"
            android:text="@string/btn_9"
            style="@style/btn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/btn_4"
            android:text="@string/btn_4"
            style="@style/btn" />
        <TextView
            android:id="@+id/btn_5"
            android:text="@string/btn_5"
            style="@style/btn"/>
        <TextView
            android:id="@+id/btn_6"
            android:text="@string/btn_6"
            style="@style/btn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/btn_1"
            android:text="@string/btn_1"
            style="@style/btn" />
        <TextView
            android:id="@+id/btn_2"
            android:text="@string/btn_2"
            style="@style/btn"/>
        <TextView
            android:id="@+id/btn_3"
            android:text="@string/btn_3"
            style="@style/btn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/btn_0"
            android:text="@string/text_0"
            style="@style/btn_zero"/>
        <TextView
            android:id="@+id/btn_point"
            android:text="@string/text_point"
            style="@style/btn"/>
    </LinearLayout>
</LinearLayout>